--- a/src/layout.astro
+++ b/src/layout.astro
@@ -11,7 +11,7 @@ let { title } = Astro.props;
 		<title>{title ? `${title} | ` : ""} Astro View Transitions Demo</title>
 		<style is:global>
 			html {
-				font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+				font-family: 'Montserrat', 'Helvetica', 'Arial', sans-serif;
 				font-size: 1.3em;
 				max-width: 40rem;
 				padding: 2rem;
